--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Мои видео по барабанам</title>
 </head>
 <body>
-    
+    <h1>Мои видео по барабанам</h1>
+    <p><a href="https://www.youtube.com/watch?v=r2xyczEIqr0">Мое Начало</a></p>
+    <p><a href="https://www.youtube.com/watch?v=hDt_wM6lf0s">Второе видео (Продолжение)</a></p>
+    <h1>Мои видео по IT</h1>
+    <p><a href="https://www.youtube.com/watch?v=AZ-eKWjNWVs&t=0s">Первое видео по IT</a></p>
+    <h1>Мой Канал</h1>
+    <p><a href="https://www.youtube.com/channel/UCqxzKsAajxTurVO5oHuqnmQ">Мой Канал</a></p>
 </body>
 </html>
